@@ -34,7 +34,10 @@
 #include <stdio.h>
 #include <string.h>
 #include <sys/types.h>
+
+#ifdef HAVE_UNISTD_H
 #include <unistd.h>
+#endif			/* #ifdef HAVE_UNISTD_H */
 
 #include <zlib.h>
 
@@ -331,7 +334,7 @@ libspectrum_zlib_compress( const libspectrum_byte *data, size_t length,
  * Returns:	error flag (libspectrum_error)
  */
 {
-  uLongf gzl = ( length * 1.001 ) + 12;
+  uLongf gzl = (uLongf)( length * 1.001 ) + 12;
   int gzret;
 
   *gzptr = malloc( gzl );
